
2007-08-13 cjg
 * Added experimental (not yet used) method for reading from the beast.

2007-08-13 cjg
 * Tidied Abstract search to be easier to subclass export plugin list.

2007-08-15 cjg
 * Fixed weird sort of error which didn't fail but should in xhtml_help.
 * Added support for <title> override in workflow.

2007-08-22 tmb
 * Fixed "action" parameter not being included in redirect_to_me_url

2007-08-28 cjg
 * Added config. hook to override current_user 
 * Added config hook to set the URL to go to if there is no current_user
 * Import::DefaultXML now disposes of no-longer needed XML chunks, stopping
    memory links if using XML::DOM
 * Added method for caching all subjects. generate_views now uses these 
    which gives a notable speed up.
 * Added on_logout hook which is called when the login page is accessed
    which allows non-eprints login cookies to be hosed.
 
2007-08-31 tmb
 * Fixed "for:value:relative:" autocomplete IDs not working under IE

2007-09-03 cjg
 * current_user now returns undef if working offline. Fixing #3091

2007-10-19 cjg
 * Prevented warning in case of undefined subject-name-language.

2007-10-19 cjg
 * Added basic changes for searching chained fields eg. documents.format
 * Fixed bug is date/time searches
 * Fixed issue with double escaping in citations.

2007-10-19 cjg
 * Added tabs for zip and wget upload of documents.

2007-10-19 cjg
 * Added "on_logout" hook.

2007-10-19 cjg
 * Change to DefaultXML import plugin to pass through attributes to the 
    subclassing import plugin.

2007-10-19 cjg
 * Added code for icons to appear in items and review pages.

2007-10-19 cjg
 * Added Screen.pm (part of previous change)

2007-10-19 cjg
 * Added new icons (part of previous change)

2007-12-03 tdb
 * #3139, show deleted records in OAI output instead of just repeating the
    current data set

2007-12-03 cjg
 * Added code to Document to allow importing from URLS

2007-12-03 cjg
 * Import IDs are removed unless import_ids is enabled.